--- a/src/assets/style/index.css
+++ b/src/assets/style/index.css
@@ -207,7 +207,7 @@
 	    justify-content: space-between;
 	-ms-flex-align: center;
 	    align-items: center;
-	background: #262a42;
+	background: #14143f;
 	margin-bottom: 8px;
 }
 .coinTable .tabhang .tabtable .table-nav li{
