--- a/static/theme/dark.less
+++ b/static/theme/dark.less
@@ -1,6 +1,6 @@
 @clr: #aaa;
-@bg-main:#080d13;
-@bg-part:#131a21;
+@bg-main:#14143f;
+@bg-part:#18184c;
 @bg-li-hov: rgb(27, 35, 43);
 body,
 #footer {
@@ -11,7 +11,7 @@ body,
 #app {
 	background: @bg-main;
 	.bg-part{
-		background: #131a21;
+		background: #18184c;
 	}
 	.bod_rc{
 		border-right: 1px solid #202538;
@@ -20,13 +20,13 @@ body,
 		border-bottom: 1px solid #202538;
 	}
 	.bgf8{
-		background: #131a21;
+		background: #18184c;
 	}
 	.eee{
-		background: #080d13;
+		background: #14143f;
 	}
 	.input_bg{
-    border-color: #4b535f;
+    border-color: #52688c;
     color: rgba(255, 255, 255, 0.8);
     background: #1b212f;
   }
@@ -43,7 +43,7 @@ body,
 		}
 	}
 	>.indexBlackes{
-		background: #080d13;
+		background: #14143f;
 		>.login,.forget-box,#register-box,{
 			background: @bg-part;
 		}
@@ -101,7 +101,7 @@ body,
 	}
 
 	#footer {
-		background: #080d13;
+		background: #14143f;
 	}
 
 	/* 币币交易 */
@@ -163,7 +163,7 @@ body,
 
 					.new_price,
 					.line {
-						border-bottom: 1px solid #343a48;
+						border-bottom: 1px solid #303b4b;
 					}
 
 					ul li:nth-child(odd) {
@@ -177,11 +177,11 @@ body,
 
 				.entrust {
 					.list-title {
-						border-bottom: 1px solid #343a48;
+						border-bottom: 1px solid #303b4b;
 					}
 
 					.content {
-						border: 1px solid #343a48;
+						border: 1px solid #303b4b;
 					}
 
 					span {
@@ -196,12 +196,12 @@ body,
 				}
 
 				.currency {
-					border: 1px solid #343a48;
+					border: 1px solid #303b4b;
 				}
 
 				.detail {
 					.list-title {
-						border-bottom: 1px solid #343a48;
+						border-bottom: 1px solid #303b4b;
 					}
 
 					ul {
@@ -221,12 +221,12 @@ body,
 
 		.trade {
 			.available {
-				border-bottom: 1px solid #343a48;
+				border-bottom: 1px solid #303b4b;
 			}
 
 			input {
-				background-color: rgba(54, 60, 68, 0.6);
-				border-color: #4b535f;
+				background-color: #14143f;
+				border-color: #52688c;
 				color: #fff;
 			}
 		}
@@ -241,7 +241,7 @@ body,
 			background: @bg-part;
 		}
     .mask {
-			background: rgba(0,0,0,.7);
+			background:18184c;
 	  }
 		.c2c-l {
 			margin-right: 10px;
@@ -259,7 +259,7 @@ body,
 
 		.c2c-r {
 			.inp-title {
-				border-bottom: 1px solid #343a48;
+				border-bottom: 1px solid #303b4b;
 			}
 
 			.inp-box {
@@ -270,8 +270,8 @@ body,
 				}
 
 				input {
-					// background-color: rgba(54, 60, 68, 0.6);
-					border-color: #4b535f;
+					// background-color: #14143f;
+					border-color: #52688c;
 					color: #fff;
 					background: #1b212f;
 				}
@@ -279,7 +279,7 @@ body,
 
 			.bot {
 				.list-title {
-					border-top: 1px solid #343a48;
+					border-top: 1px solid #303b4b;
 				}
 
 				li {
@@ -303,8 +303,8 @@ body,
 			}
 
 			input {
-				// background-color: rgba(54, 60, 68, 0.6);
-				border-color: #4b535f;
+				// background-color: #14143f;
+				border-color: #52688c;
 				color: rgba(255, 255, 255, 0.8);
 				background: #1b212f;
 			}
@@ -338,8 +338,8 @@ body,
 			}
 
 			input {
-				// background-color: rgba(54, 60, 68, 0.6);
-				border-color: #4b535f;
+				// background-color: #14143f;
+				border-color: #52688c;
 				color: rgba(255, 255, 255, 0.8);
 				background: #1b212f;
 			}
@@ -363,7 +363,7 @@ body,
     border-top: 1px solid #1e272f;
 }
 	.input-main{
-		border-color: #4b535f;
+		border-color: #52688c;
 		color: #fff;
 		background: #1b212f;
 	}
@@ -374,7 +374,7 @@ body,
         .ticket-active {
             border: 1px solid #202538;
             margin-bottom: -1px;
-            border-bottom-color: #080d13;
+            border-bottom-color: #14143f;
         }
 		}
 	}
@@ -391,7 +391,7 @@ body,
 	}
 	.log_wrap[data-v-1f036bf9] {
     border: 1px solid #1d1d1f;
-    background: #131a21;
+    background: #18184c;
 	}
 	.allow{color:#333}
 }
@@ -399,7 +399,7 @@ body,
 
 	// 滚动条
 	.scroll::-webkit-scrollbar {
-    background-color: #080d13!important;
+    background-color: #14143f!important;
   }
 	.scroll::-webkit-scrollbar-thumb {
     background-color: #222e3c!important;
