--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -35,7 +35,7 @@ a{
 input{
 	border:0;
     outline:0;
-    // #181b2a
+    // #18184c
 }
 input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {    -webkit-appearance: none;} input[type="number"] {    -moz-appearance: textfield;
 
@@ -186,7 +186,7 @@ button{border: none;outline: none;}
 // 状态
 .comColor{color: #9e9e9e}
 .ceilColor{color: #009688;}
-// .contentBK{background-color: #181b2a}
+// .contentBK{background-color: #18184c}
 // .topshadow{box-shadow: 0 3px 6px rgba(0,0,0,.1);}
 // .ttBk{background-color: #1b1e2e;}
 .active{color: #d45858;border-bottom: 1px solid #d45858;}
@@ -209,7 +209,7 @@ button{border: none;outline: none;}
     height: 48px;
     line-height: 48px;
     padding: 0 50px;
-    // background-color: #181b2a;
+    // background-color: #18184c;
     // color: #cdd6e4;
 }
 .account {
@@ -220,13 +220,13 @@ button{border: none;outline: none;}
 .account-main{
     width: 1270px;
     min-height: 600px;
-    // background-color: #181b2a;
+    // background-color: #18184c;
     float: right;
     padding-bottom: 20px;
 }
 .back-nav {
     height: 72px;
-    // background-color: #181b2a;
+    // background-color: #18184c;
     line-height: 72px;
     padding: 0 30px;
     border-radius: 3px;
@@ -234,18 +234,18 @@ button{border: none;outline: none;}
 .nav-after{
     display: block;
     height: 10px;
-    // background-color: #262a42;
+    // background-color: #14143f;
 }
 .account-content {
     width: 100%;
     min-height: 750px;
-    // background-color: #181b2a;
+    // background-color: #18184c;
 }
 .positionR {
     position: relative;
 }
 .pageBack {
-    // background-color: #262a42;
+    // background-color: #14143f;
 }
 .bb_shadow{
     // box-shadow: 0 5px 5px #1b1e2e;
