--- a/static/theme/dark.css
+++ b/static/theme/dark.css
@@ -1,10 +1,10 @@
 body,
 #footer {
   color: #aaa;
-  background: #080d13;
+  background: #14143f;
 }
 #app {
-  background: #080d13;
+  background: #14143f;
   /* 主背景 */
   /* 模块背景 */
   /* 首页登录框 */
@@ -13,22 +13,22 @@ body,
   /* c2c */
 }
 #app .bg-part {
-  background: #131a21;
+  background: #18184c;
 }
 #app .bod_rc {
-  border-right: 1px solid #202538;
+  border-right: 1px solid #638bd4;
 }
 #app .bod_bc {
   border-bottom: 1px solid #202538;
 }
 #app .bgf8 {
-  background: #131a21;
+  background: #18184c;
 }
 #app .eee {
-  background: #080d13;
+  background: #14143f;
 }
 #app .input_bg {
-  border-color: #4b535f;
+  border-color: #52688c;
   color: rgba(255, 255, 255, 0.8);
   background: #1b212f;
 }
@@ -37,26 +37,26 @@ body,
 }
 #app .add-mycoin,
 #app > .indexBlackes > .box {
-  background: #080d13;
+  background: #14143f;
 }
 #app .add-mycoin .account,
 #app > .indexBlackes > .box .account {
   margin-bottom: 0;
 }
 #app > .indexBlackes {
-  background: #080d13;
+  background: #14143f;
 }
 #app > .indexBlackes > .login,
 #app > .indexBlackes .forget-box,
 #app > .indexBlackes #register-box {
-  background: #131a21;
+  background: #18184c;
 }
 #app #user-center > .content > ul,
 #app #user-center > .content > div,
 #app > .login,
 #app .indexBlackes .indexBlackes,
 #app > .forget-box {
-  background: #131a21;
+  background: #18184c;
 }
 #app .box .content_li,
 #app .box .list li {
@@ -69,7 +69,7 @@ body,
   color: #fff;
 }
 #app .box .bgf8 {
-  background: #131a21;
+  background: #18184c;
 }
 #app .homeLogin,
 #app .homeLogin:hover,
@@ -96,30 +96,30 @@ body,
   border-bottom: 1px solid #19222b !important;
 }
 #app #footer {
-  background: #080d13;
+  background: #14143f;
 }
 #app .home {
-  background: #080d13;
+  background: #262a42;
 }
 #app .home .main .main-l {
-  background: #131a21;
+  background: #262a42;
   /* 币币交易公告 */
 }
 #app .home .main .main-l > div {
-  background: #131a21;
+  background: #18184c;
   border: none;
 }
 #app .home .main .main-l .sidebar {
-  background: #131a21;
+  background: #181b2a;
   border: none;
 }
 #app .home .main .main-l .sidebar .tabtitle .active {
-  border: 1px solid #a3acb5;
-  border-bottom: none !important;
+  color:#7a98f7;
+  border-bottom: 1px solid #7a98f7 ;
 }
 #app .home .main .main-l .sidebar .tabtitle span,
 #app .home .main .main-l .sidebar .tabtitle .active {
-  border-bottom: 1px solid #a3acb5;
+  border-bottom: 1px solid #7a98f7;
 }
 #app .home .main .main-l .sidebar ul.coin-wrap li p:nth-child(even) {
   background: rgba(0, 0, 0, 0.1) !important;
@@ -128,22 +128,22 @@ body,
   background: #1b232b !important;
 }
 #app .home .main .main-l .notice {
-  background: #131a21;
+  background: #181b2a;
   border: none;
 }
 #app .home .main .main-l .notice .account-content {
-  background: #131a21;
+  background: #181b2a;
 }
 #app .home .main .main-l .notice .account-content li {
   border-bottom: 1px dashed grey;
 }
 #app .home .main .main-r {
-  background: #131a21;
+  background: #181b2a;
   border-left: none;
 }
 #app .home .main .main-r .exchange .new_price,
 #app .home .main .main-r .exchange .line {
-  border-bottom: 1px solid #343a48;
+  border-bottom: 1px solid #303b4b;
 }
 #app .home .main .main-r .exchange ul li:nth-child(odd) {
   background: rgba(0, 0, 0, 0.1) !important;
@@ -152,10 +152,10 @@ body,
   background: #1b232b !important;
 }
 #app .home .main .main-r .entrust .list-title {
-  border-bottom: 1px solid #343a48;
+  border-bottom: 1px solid #303b4b;
 }
 #app .home .main .main-r .entrust .content {
-  border: 1px solid #343a48;
+  /* border: 1px solid #303b4b; */
 }
 #app .home .main .main-r .entrust span {
   color: #aaa;
@@ -167,10 +167,10 @@ body,
   color: #009688;
 }
 #app .home .main .main-r .currency {
-  border: 1px solid #343a48;
+  border: 1px solid #303b4b;
 }
 #app .home .main .main-r .detail .list-title {
-  border-bottom: 1px solid #343a48;
+  border-bottom: 1px solid #303b4b;
 }
 #app .home .main .main-r .detail ul {
   color: #aaa;
@@ -182,19 +182,19 @@ body,
   background: #1b232b !important;
 }
 #app .home .trade .available {
-  border-bottom: 1px solid #343a48;
+  border-bottom: 1px solid #303b4b;
 }
 #app .home .trade input {
-  background-color: rgba(54, 60, 68, 0.6);
-  border-color: #4b535f;
+  background-color: #262a42;
+  border-color: #52688c;
   color: #fff;
 }
 #app #c2c-box {
   border: none;
-  background: #080d13;
+  background: #14143f;
 }
 #app #c2c-box > div {
-  background: #131a21;
+  background: #181b2a;
 }
 #app #c2c-box .mask {
   background: rgba(0, 0, 0, 0.7);
@@ -204,14 +204,14 @@ body,
   border: none;
 }
 #app #c2c-box .c2c-l ul {
-  background: #131a21;
+  background: #181b2a;
 }
 #app #c2c-box .c2c-l ul li:hover,
 #app #c2c-box .c2c-l ul .bg_active {
   background: #262b3c;
 }
 #app #c2c-box .c2c-r .inp-title {
-  border-bottom: 1px solid #343a48;
+  border-bottom: 1px solid #303b4b;
 }
 #app #c2c-box .c2c-r .inp-box {
   border: 1px solid #4b535f;
@@ -220,12 +220,12 @@ body,
   background: none;
 }
 #app #c2c-box .c2c-r .inp-box input {
-  border-color: #4b535f;
+  border-color: #52688c;
   color: #fff;
   background: #1b212f;
 }
 #app #c2c-box .c2c-r .bot .list-title {
-  border-top: 1px solid #343a48;
+  border-top: 1px solid #303b4b;
 }
 #app #c2c-box .c2c-r .bot li {
   border-top: 1px solid #292e42;
@@ -243,12 +243,12 @@ body,
   color: #aaa;
 }
 #app .wrap .inp_wrap input {
-  border-color: #4b535f;
+  border-color: #52688c;
   color: rgba(255, 255, 255, 0.8);
   background: #1b212f;
 }
 #app .currency-lst ul {
-  background: #131a21;
+  background: #181b2a;
 }
 #app .currency-lst ul .list_title {
   background: #282e42;
@@ -260,7 +260,7 @@ body,
   background: #282e42;
 }
 #app #user-setting {
-  background: #131a21;
+  background: #181b2a;
 }
 #app #user-setting .setting-l {
   border-right: 1px solid #4b535f;
@@ -273,7 +273,7 @@ body,
   border-right: 1px solid #4b535f;
 }
 #app #user-setting .inp-item input {
-  border-color: #4b535f;
+  border-color: #52688c;
   color: rgba(255, 255, 255, 0.8);
   background: #1b212f;
 }
@@ -284,7 +284,7 @@ body,
   border-right: 1px dashed #2f3440;
 }
 #app .noticeDetail {
-  background: #131a21;
+  background: #181b2a;
 }
 #app #user-center > .content > .content-l {
   border-right: 1px solid #1e272f;
@@ -293,7 +293,7 @@ body,
   border-top: 1px solid #1e272f;
 }
 #app .input-main {
-  border-color: #4b535f;
+  border-color: #52688c;
   color: #fff;
   background: #1b212f;
 }
@@ -303,7 +303,7 @@ body,
 #app .hisorder .tabbox .ticket-active {
   border: 1px solid #202538;
   margin-bottom: -1px;
-  border-bottom-color: #080d13;
+  border-bottom-color: #14143f;
 }
 #app .detail .enterbox .chossefile {
   background: #283340;
@@ -317,13 +317,13 @@ body,
 }
 #app .log_wrap[data-v-1f036bf9] {
   border: 1px solid #1d1d1f;
-  background: #131a21;
+  background: #181b2a;
 }
 #app .allow {
-  color: #333;
+  color: #eee;
 }
 .scroll::-webkit-scrollbar {
-  background-color: #080d13!important;
+  background-color: #14143f!important;
 }
 .scroll::-webkit-scrollbar-thumb {
   background-color: #222e3c!important;
