--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -86,6 +86,9 @@ input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {    -webkit-a
         -ms-flex-pack: justify;
             justify-content: space-between;
 }
+.jscenter{
+    justify-content: center;
+}
 .around{
     -ms-flex-pack: distribute;
         justify-content: space-around;
@@ -133,6 +136,8 @@ input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {    -webkit-a
 .mt40{margin-top: 40px;}
 .mt60{margin-top: 60px;}
 .mt50{margin-top: 50px;}
+.mr10{margin-right: 10px;}
+.mr15{margin-right: 15px;}
 .mr20{margin-right: 20px;}
 .mr60{margin-right: 60px;}
 .mt3{margin-top:3px;}
@@ -149,8 +154,10 @@ input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {    -webkit-a
 .ml20 {margin-left: 20px;}
 .pdlr20{padding-left: 20px;padding-right: 20px;}
 .pdtb20{padding-top: 20px;padding-bottom: 20px;}
+.pdtb10{padding-top: 10px;padding-bottom: 10px;}
 .pdt20{padding-top: 20px;}
 .pdb20{padding-bottom: 20px;}
+.pdb10{padding-bottom: 10px;}
 .pb50{padding-bottom: 50px;}
 .w5{width: 5%;}
 .w6{width: 6%}
@@ -270,4 +277,10 @@ button{border: none;outline: none;}
 }
 .light_blue{
     color: #3b68bb;
+}
+.posrel{
+    position: relative;
+}
+.posabs{
+    position: absolute;
 }
