--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -1,5 +1,5 @@
 @import "mixin";
-html{width: 100%;color:#333;background-color: #fff;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;font-family:PingFangSC-Regular,'微软雅黑',sans-serif;}
+html{width: 100%;color:#333;background-color: transparent;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;font-family:PingFangSC-Regular,'微软雅黑',sans-serif;}
 html *{outline:0;-webkit-text-size-adjust:none;-webkit-box-sizing:border-box;box-sizing:border-box}
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{margin:0;padding:0}
 input,select,textarea{font-size:100%}
@@ -27,7 +27,7 @@ html,body{
 }
 html,body{
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 a{
 	color:inherit;
